Use OCR for all puzzles that require it.